Add complete setup instructions: AOSP, OHOS, Dalvik clone + build + env vars (EN + CN)